<resources>

    <string name="app_name" translatable="false">NextzyTime</string>

    <string name="take_photos">Take Photo</string>
    <string name="edit_people">Edit People</string>
    <string name="delete_people">Delete People</string>
    <string name="detail_people">Detail</string>
    <string name="add_people">Add People</string>

    <string name="question_name">Name and Lastname</string>
    <string name="question_job">Job Position</string>
    <string name="question_birthday">Birthday</string>
    <string name="question_date_start_job">Date to start job</string>
    <string name="question_game_like">Which game do you like?</string>
    <string name="question_why_choose_this_job">Why do you decide to work as this job?</string>
    <string name="question_why_choose_this_phone">What\'s your smartphone?</string>

    <string name="save_success">Save Success</string>
    <string name="save_error">Save Error</string>
    <string name="delete_success">Delete Success</string>
    <string name="delete_error">Delete Error</string>

    <string name="error_form_name">Please fill name and lastname</string>
    <string name="error_form_date_birth">Please fill birth date</string>
    <string name="error_form_date_job">Please fill start job date</string>
    <string name="error_form_job">Please fill job</string>
    <string name="error_form_job_description">Please fill job description</string>
    <string name="error_form_game">Please fill game</string>
    <string name="error_form_smartphone">Please fill smartphone</string>
    <string name="error_form_profile">Please take profile</string>
    <string name="error_form_photo">Please take photo</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="you_are_want_to_delete">Do you want to delete?</string>
    <string name="credit_the_khaeng" translatable="false">The Khaeng</string>
    <string name="take_with">Take Photos With</string>

    <string name="sort_by_latest">Sort by latest</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_position">Sort by position</string>

    <string name="change_to_english">English</string>
    <string name="change_to_thai">Thai</string>

    <string name="want_permission">Please, Take enable permission</string>
    <string name="want_permission_ok">Thank you, for enable permission</string>
    <string name="want_permission_cancel">Sorry Please, Take enable permission</string>
</resources>
