<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting"
        android:title=""
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/menu_english"
                android:title="@string/change_to_english"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_thai"
                android:title="@string/change_to_thai"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/sort_by_latest"
        android:title="@string/sort_by_latest"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_by_name"
        android:title="@string/sort_by_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_by_position"
        android:title="@string/sort_by_position"
        app:showAsAction="never" />

</menu>