<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_add_people">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/default_padding_margin_large">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="@dimen/form_profile"
                android:layout_height="@dimen/form_profile"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile_circle" />

            <LinearLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/iv_profile"
                android:orientation="vertical"
                android:padding="@dimen/default_padding_of_screen">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_name">

                    <EditText
                        android:id="@+id/edt_name_and_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_job">

                    <EditText
                        android:id="@+id/edt_job"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/question_birthday">

                        <EditText
                            android:id="@+id/edt_birthday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="false"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/question_date_start_job">

                        <EditText
                            android:id="@+id/edt_startjob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="false"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_why_choose_this_job">

                    <EditText
                        android:id="@+id/edt_job_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        android:maxEms="5"
                        android:minLines="5"
                        android:scrollbars="vertical" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_game_like">

                    <EditText
                        android:id="@+id/edt_game"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_why_choose_this_phone">

                    <EditText
                        android:id="@+id/edt_your_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:background="@color/colorGreyDarker"
                android:id="@+id/photo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_layout"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/form_photo_height"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_selfie" />

            </RelativeLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>

